add logos aside temperatures

--- a/front/CSS/debug.css
+++ b/front/CSS/debug.css
@@ -5,3 +5,11 @@
 #lower{
     background-color: blue;
 }
+
+.temperature{
+    background-color: brown;
+}
+
+.left{
+    background-color: antiquewhite;
+}
