--- a/front/CSS/size.css
+++ b/front/CSS/size.css
@@ -1,10 +1,14 @@
 body{
-    margin-left:25%;
-    margin-right:25%;
+    margin-left:10%;
+    margin-right:10%;
 }
 
 h1{
     font-size: 7em;
+}
+
+h2{
+    font-size: 4em;
 }
 
 .dasbhoard_indicator{
@@ -12,7 +16,8 @@ h1{
 }
 
 .temperature{
-    margin-right: 2em;
+    /* margin: 2em; */
+    font-size: 4em;
 }
 
 .dasbhoard_indicator{
@@ -23,4 +28,8 @@ h1{
     border: solid black 0.1em;
     border-radius: 1em;
     width:20em;
+}
+
+.logo{
+    width: 5em;
 }
