use informative names instead of temperature_1 etc

--- a/front/CSS/size.css
+++ b/front/CSS/size.css
@@ -27,8 +27,9 @@ h2{
     border: solid black 0.1em;
     border-radius: 0.5em;
     width:10em;
+    margin: 0.5em;
 }
 
 .logo{
-    width: 1em;
+    width: 5em;
 }
